<resources>
    <string name="fileopen_error_during_intent_processing">Error during intent processing</string>
    <string name="fileopen_error_during_intent_processing_info">Can\'t extract file path from intent. Please save intent data into file to open it or:</string>

    <string name="fileopen_private_resource_access">Access to private file</string>
    <string name="fileopen_private_resource_access_info">Can\'t access file directly, please select one of options below:</string>

    <string name="fileopen_permission_dialog">Can\'t access file directly</string>
    <string name="fileopen_permission_dialog_info">Please grant read file permissions to access it directly or choose option below:</string>

    <string name="fileopen_source_unavailable">File is not accessible</string>
    <string name="fileopen_source_unavailable_info">The app that shared the file (%1$s) doesn\'t provide access to it any more: %2$s. Please share or open the file from that app again, or:</string>
    <string name="fileopen_source_unavailable_message">The app that shared the file (%1$s) doesn\'t provide access to it any more: %2$s. Please share or open the file from that app again.</string>

    <string name="fileopen_permissions_grant_read">Grant storage read permission…</string>
    <string name="fileopen_save_to_file">Save to new file…</string>
    <string name="fileopen_open_in_temporary_file">Open via temporary file</string>
    <string name="fileopen_open_recent_files">Go to recent books…</string>
    <string name="fileopen_report_error_by_github_and_return">Report issue on github and return to dialog…</string>
    <string name="fileopen_report_error_by_email_and_return">Report error by email and return to dialog…</string>

    <string name="string_exception">Exception</string>
    <string name="string_intent">Intent</string>
    <string name="string_cause">Cause</string>

    <string name="crash_on_book_opening_title">Error during file opening</string>
    <string name="crash_on_intent_opening_title">Error during intent processing</string>
    <string name="crash_on_book_opening_message_header">Error during file \`%1$s\` opening. Please report an issue:</string>
    <string name="crash_on_book_opening_message_header_panel">Error during file \`%1$s\` opening:</string>

    <string name="crash_on_book_opening_encrypted">Encrypted document</string>

    <string name="string_send">Send…</string>
    <string name="send_report_header">[Please provide additional details (steps to reproduce issue)]</string>

    <string name="error_on_file_saving_title">Error during file saving</string>

    <string name="fileopen_cant_open">Can\'t open the document: %s.</string>
    <string name="fileopen_file_is_emppty">file is empty</string>
    <string name="fileopen_no_pages">document has no pages</string>
</resources>